<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/layoutPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/cardview">

        <!-- Imagen principal -->
        <ImageView
            android:id="@+id/ivPersonaje"
            android:layout_width="288dp"
            android:layout_height="293dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/descripcion_Imagen_personaje"
            android:scaleType="fitCenter" />

        <!-- Nombre -->
        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_personaje"
            android:textColor="@color/color_titulos"
            android:textSize="40sp"
            android:textStyle="bold"
            android:fontFamily="@font/angkor"/>

        <!-- KI -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ki_personaje"
                android:textColor="@color/color_texto"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvKi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textSize="17sp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <!-- KI MÁX -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ki_maximo_personaje"
                android:textColor="@color/color_texto"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvKiMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textSize="17sp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <!-- RAZA -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/raza_personaje"
                android:textColor="@color/color_texto"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRaza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textSize="17sp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <!-- GÉNERO -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genero_personaje"
                android:textColor="#000"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvGenero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textSize="17sp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <!-- AFILIACIÓN -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/afiliacion_personaje"
                android:textColor="@color/color_texto"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAfiliacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textSize="17sp"
                android:textColor="@color/white"
                />
        </LinearLayout>

        <!-- Descripción -->
        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/descripcion_personaje"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic" />

        <!-- Título de transformaciones -->
        <TextView
            android:id="@+id/tvTransformaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transformaciones_personajes"
            android:textSize="40sp"
            android:textColor="@color/color_titulos"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:visibility="gone"
            android:fontFamily="@font/angkor"/>

        <!-- Contenedor dinámico -->
        <LinearLayout
            android:id="@+id/contenedorTransformaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp" />
    </LinearLayout>
</ScrollView>
